[project]
name = "cognitive-reasoning-PTSD"
version = "0.1.0"
description = "A cognitive reasoning analysis package for PTSD mechanism exploration."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name="Student", email="" } ]

[project.urls]
"Homepage" = "https://github.com/mobius-yang/cognitive-reasoning#"

[project.dependencies]
numpy = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
xgboost = "*"

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
